Almost finished. Need summary